JavaScript/rediscovering_javascript/parameters/output/extractRestAndDefault.output
const notAllowed = function(first, second, ...moreValues = [1, 2, 3]) {}
                                                         ^

SyntaxError: Rest parameter may not have a default initializer
